fix overflow issues on metrics table (#8448)
## Summary
- fixes issue where header could overflow (use ellipses and hide
overflow when there are way too many cells)
- fixes issue where header/rows could wrap to multiple lines
- set a min-width on the first column so timestamps are always fully
visible
- fixes issue where an overflowing table would cause funky dashboard
grid sizes
- add empty state
- fix helmets and remove autocomplete
https://www.loom.com/share/2c74bffe247343c4a63a5bad915b75ac
https://www.loom.com/share/b1b49e18da3542db8fec8b7c21897509
<!--
Ideally, there is an attached GitHub issue that will describe the "why".

If relevant, use this section to call out any additional information
you'd like to _highlight_ to the reviewer.
-->

## How did you test this change?
- clicktested locally
<!--
Frontend - Leave a screencast or a screenshot to visually describe the
changes.
-->

## Are there any deployment considerations?
- no
<!--
 Backend - Do we need to consider migrations or backfilling data?
-->

## Does this work require review from our design team?
- @julian-highlight 
<!--
 Request review from julian-highlight / our design team 
-->

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -7401,6 +7401,12 @@ body {
 ._1s4anja3 {
   overflow-y: hidden;
 }
+._1s4anja4 {
+  min-width: 106px;
+}
+._1s4anja5 {
+  overflow: hidden;
+}
 .dg2vg60 {
   z-index: 2;
   backdrop-filter: grayscale(50%);
